syntax = "proto3";

package auth;
import "enumeration/role.proto";
import "utils/base_response.proto";

option java_multiple_files = true;
option java_package = "com.ecommerce.auth";

service AccountService {
  rpc CreateAccount (ReqCreateAccountDTO) returns (utils.base_response.BaseResponse);
  rpc DeleteAccount (ReqDeleteAccountDTO) returns (utils.base_response.BaseResponse);
}

message ReqCreateAccountDTO {
  string username = 1;
  string password = 2;
  int64 userId = 3;
  enumeration.Role role = 4;
}

message ReqDeleteAccountDTO {
  string account_id = 1;
}

message ResCreateAccountDTO {
  string account_id = 1;
}