syntax = "proto3";

package utils.base_response;

option java_multiple_files = true;
option java_package = "com.ecommerce.utils.base_response";

import "google/protobuf/any.proto";

message BaseResponse {
  int32 status_code = 1;
  string message = 2;
  google.protobuf.Any data = 3;
}